--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1617,7 +1617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 753,
+   "execution_count": 780,
    "id": "82a76662-05c3-4d4f-a08f-d95096d63e67",
    "metadata": {},
    "outputs": [
@@ -1698,13 +1698,13 @@
        "TEST0004.png    monk_1   0_17  female"
       ]
      },
-     "execution_count": 753,
+     "execution_count": 780,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model_id = '2cf26146-2391-4029-8e9e-2e9aa8b21008_50'\n",
+    "model_id = 'final_model'\n",
     "\n",
     "probs = load(f'predictions/{model_id}_probs.pkl')\n",
     "labels, object_i = load(f'predictions/{model_id}_labels.pkl')\n",
@@ -1717,7 +1717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 754,
+   "execution_count": 781,
    "id": "a0a0635b-d411-4b3a-adc2-53b8cf282c3e",
    "metadata": {},
    "outputs": [
@@ -1798,7 +1798,7 @@
        "TEST0004.png    monk_8   0_17    male"
       ]
      },
-     "execution_count": 754,
+     "execution_count": 781,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1809,7 +1809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 755,
+   "execution_count": 782,
    "id": "1a1058b9-bc08-4e33-a0d4-7ba5395be5f4",
    "metadata": {},
    "outputs": [],
@@ -1822,7 +1822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 756,
+   "execution_count": 783,
    "id": "11e3a7e5-68e3-4abd-8ee5-cfed493dea70",
    "metadata": {},
    "outputs": [
@@ -1832,7 +1832,7 @@
        "((3000, 10), (3000, 4), (3000, 2))"
       ]
      },
-     "execution_count": 756,
+     "execution_count": 783,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1843,7 +1843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 757,
+   "execution_count": 784,
    "id": "77f5864b-c6c9-496c-9da1-52d5eff4068a",
    "metadata": {},
    "outputs": [],
@@ -1856,7 +1856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 758,
+   "execution_count": 785,
    "id": "94b64c43-eb75-4d6b-bc18-89e822c46227",
    "metadata": {},
    "outputs": [],
@@ -1866,7 +1866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 759,
+   "execution_count": 786,
    "id": "d1683e0f-8a7b-4f41-8e8a-6a0bbdfc792a",
    "metadata": {},
    "outputs": [
@@ -1876,7 +1876,7 @@
        "0.291"
       ]
      },
-     "execution_count": 759,
+     "execution_count": 786,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1889,7 +1889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 760,
+   "execution_count": 787,
    "id": "a881ceaf-1d73-4458-a048-50f226f4fd67",
    "metadata": {},
    "outputs": [
@@ -1899,7 +1899,7 @@
        "0.626"
       ]
      },
-     "execution_count": 760,
+     "execution_count": 787,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1912,7 +1912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 761,
+   "execution_count": 788,
    "id": "e84252f8-d5d5-40d8-88e3-40bb8531379c",
    "metadata": {},
    "outputs": [
@@ -1922,7 +1922,7 @@
        "0.842"
       ]
      },
-     "execution_count": 761,
+     "execution_count": 788,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1935,7 +1935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 762,
+   "execution_count": 789,
    "id": "a47eb5bf-5345-4b2a-88bc-977e911b5d9b",
    "metadata": {},
    "outputs": [],
@@ -1945,7 +1945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 763,
+   "execution_count": 790,
    "id": "63afe3e1-fd5b-46e2-8a77-e0c58c40f768",
    "metadata": {},
    "outputs": [],
@@ -1955,7 +1955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 764,
+   "execution_count": 791,
    "id": "6033f5c0-96d5-422f-84e3-dc3c73f9f762",
    "metadata": {},
    "outputs": [],
@@ -1965,7 +1965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 765,
+   "execution_count": 792,
    "id": "dec737a1-3035-4cbe-9d37-40438580aa5d",
    "metadata": {},
    "outputs": [
@@ -1978,7 +1978,7 @@
        "  'gender': 0.021996722111796818}}"
       ]
      },
-     "execution_count": 765,
+     "execution_count": 792,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2008,7 +2008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 767,
+   "execution_count": 793,
    "id": "babc90a0-6d6c-406f-a4e4-c87eefeee53f",
    "metadata": {},
    "outputs": [
@@ -2018,13 +2018,56 @@
        "6.9461499591972675"
       ]
      },
-     "execution_count": 767,
+     "execution_count": 793,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "getScore(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 794,
+   "id": "1571c97b-d7e8-42fc-a14e-874e87e3bda2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'submission_name': '8-Bit Bias Bounty Entry',\n",
+       " 'score': 6.9461499591972675,\n",
+       " 'metrics': {'accuracy': {'skin_tone': 0.291, 'age': 0.626, 'gender': 0.842},\n",
+       "  'disparity': {'skin_tone': 0.2024535476002583,\n",
+       "   'age': 0.21320038071178876,\n",
+       "   'gender': 0.021996722111796818}}}"
+      ]
+     },
+     "execution_count": 794,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "submission = {\n",
+    "    'submission_name': '8-Bit Bias Bounty Entry',\n",
+    "    'score': getScore(results),\n",
+    "    'metrics': results\n",
+    "}\n",
+    "submission"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 796,
+   "id": "95a0bb91-d8e5-462c-ad17-809b00a9e3ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "with open(\"score.json\", \"w\") as f:\n",
+    "    json.dump(submission, f, indent=4)"
    ]
   },
   {
